tests/call/num.rev
1() // error: only functions and structures are callable
1.4() // error: only functions and structures are callable